<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_10sdp"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp"
    tools:context=".OurLogin">

    <Button
        android:id="@+id/google_login"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginLeft="@dimen/_38sdp"
        android:layout_marginEnd="@dimen/_38sdp"
        android:layout_marginRight="@dimen/_38sdp"
        android:layout_marginBottom="@dimen/_38sdp"
        android:text="Log-in with Google"
        android:textSize="@dimen/_10sdp"
        android:onClick="google_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.387" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginLeft="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_200sdp"
        android:layout_marginRight="@dimen/_200sdp"
        android:text="@string/forgot_password"
        android:onClick="showForgotDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginStart="@dimen/_110sdp"
        android:layout_marginLeft="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_200sdp"
        android:layout_marginEnd="@dimen/_110sdp"
        android:layout_marginRight="@dimen/_110sdp"
        android:text="@string/login"
        android:textSize="@dimen/_23sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_250sdp"
        android:layout_marginEnd="@dimen/_18sdp"

        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_38sdp"
        android:layout_marginBottom="@dimen/_38sdp"
        android:textSize="@dimen/_10sdp"
        android:enabled="true"
        android:text="Log in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.403" />

    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_38sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_38sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/password_show"
        android:layout_width="@dimen/_33sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_298sdp"
        android:onClick="show_password_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noshow" />
</androidx.constraintlayout.widget.ConstraintLayout>